force-app/main/default/objects/Web_Engagement_Event__c/Web_Engagement_Event__c.object-meta.xml
<CustomObject>
    <label>Web Engagement Event</label>
    <nameField>
        <displayFormat>WEB-{00000}</displayFormat>
        <label>Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Engagement Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>