force-app/main/default/objects/Web_Engagement_Event__c/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <label>Device Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>