force-app/main/default/objects/Web_Engagement_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>page_view</fullName>
                <default>true</default>
                <label>page_view</label>
            </value>
            <value>
                <fullName>click_cta</fullName>
            </value>
            <value>
                <fullName>config_interaction</fullName>
            </value>
            <value>
                <fullName>return_visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>