force-app/main/default/objects/Web_Engagement_Event__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <label>Referral Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>