force-app/main/default/objects/Web_Engagement_Event__c/fields/Scroll_Depth_Percent__c.field-meta.xml
<CustomField>
    <fullName>Scroll_Depth_Percent__c</fullName>
    <label>Scroll Depth (%)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>