force-app/main/default/objects/Web_Engagement_Event__c/fields/Time_On_Page_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Time_On_Page_Seconds__c</fullName>
    <label>Time on Page (seconds)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>