force-app/main/default/objects/Web_Engagement_Event__c/fields/Vehicle_Model_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model_Viewed__c</fullName>
    <label>Vehicle Model Viewed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>